# logs

./: .gitignore  .travis.yml  CMakeLists.txt  README.md
include/logs/: config.h  level.h  log.h  logger.h  null.h  registry.h  sink.h  stream_sink.h
src/: registry.cpp
tests/: CMakeLists.txt  test.cpp
